worked around display bug in development created by 11ty inserting html into body.  wrapped all content in a div.

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -77,7 +77,7 @@ p {
 }
 */
 
-body {
+div#body {
     margin: 0;
     display: grid;
     grid-template-columns: [side] minmax(20rem, 1fr) [content] 3fr;
@@ -87,22 +87,22 @@ body {
     background: var(--page-background);
 }
 
-body > header {
+div#body > header {
     grid-column: side / span 2;
 }
 
-body > footer {
+div#body > footer {
     grid-column: side / span 2;
     font-size: .8em;
     background: var(--footer-background);
 }
 
-body > footer > p {
+div#body > footer > p {
     margin-left: 1em;
     max-width: 60%;
 }
 
-body > main {
+div#body > main {
     margin: 0;
     padding: 0;
     border-left: 1px solid var(--menu-hover-background);
@@ -125,7 +125,7 @@ aside.hide {
   display: none;
 }
 
-body > main.full-width {
+div#body > main.full-width {
   grid-column: side / span 2;
 }
 
